--- a/dino.html
+++ b/dino.html
@@ -1,15 +1,8 @@
 <html>
 
 <head>
-<title>Google Classroom</title>
-<meta name="description" content="Dino Chrome">
-<meta property="og:title" content="Play Chrome Dino">
-<meta property="og:type" content="article">
-<meta property="og:url" content="http://www.thecodepost.org">
-<meta property="og:image" content="http://img.thecodepost.org/2015/01/trex.png">
-<meta property="og:site_name" content="The Code Post">
-<meta property="og:description" content="Google Chrome Dino for all devices. Adapted by Elizalde Alexios">
- <link rel="icon" href="https://ssl.gstatic.com/classroom/ic_product_classroom_32.png">
+<title>GDino🦖🦖🦖</title>
+ <link rel="icon" href="https://play-lh.googleusercontent.com/iiIJq5JmLFYNI1bVz4IBHyoXs508JcEzHhOgau69bnveF9Wat51-ax9LMPVOlneKwqgg">
 
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 
