--- a/index.html
+++ b/index.html
@@ -2525,6 +2525,22 @@ html[subframe] body {
   }
 }
 </style>
+
+<style>
+  body {
+      transition: filter 0.3s ease;
+  }
+  .inverted {
+      filter: invert(100%);
+  }
+</style>
+
+<script>
+  document.getElementById('toggleButton').addEventListener('click', function() {
+      document.body.classList.toggle('inverted');
+  });
+</script>
+
 </head>
 
 <body id="t">
@@ -2546,7 +2562,7 @@ html[subframe] body {
    }(document, 'script', 'facebook-jssdk'));
 </script>
 <div id="main-frame-error" class="interstitial-wrapper" jstcache="0">
-    <div class="onlyforchrome" style="font-size: 30px;text-align: center;font-family: Helvetica;">Press space to start</div>
+    <div class="onlyforchrome" style="font-size: 30px;text-align: center;font-family: Helvetica;">Press space to start <br></div>    <button id="toggleButton">Toggle Invert</button>
     <div class="onlyforchrome" style="margin-top:5px;text-align:center;color:#8a8a8a;margin-bottom:80px; font-size:.8em;line-height:1.2em;font-family: Georgia;"><a href="http://www.thecodepost.org/internet/play-hidden-t-rex-game-offline-chrome/" target="_blank"></div>
 	<div id="main-frame-notchrome" style="display:none; margin-top:50px;">Sorry, this game only runs on the Google Chrome! You can download it free <a href="https://www.google.com/chrome">here</a></div>
     <div id="offline-resources" jstcache="0">
